# tg-file-view

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  config.py  database.py  docker-compose.yaml  implementation_plan.md  logging_config.py  main.py  models.py  pyproject.toml
.opencode/skills/tdd-dev-workflow/: SKILL.md
api/: auth.py  cache.py  channels.py  config.py  files.py  sync.py  thumbnails.py  utils.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/composables/: useDarkMode.js
frontend/src/router/: index.js
frontend/src/tests/: App.test.js  AuthView.test.js  CacheView.test.js  ChannelsView.test.js  DashboardView.test.js  FilesView.test.js  SettingsView.test.js  SyncView.test.js  ThumbnailsView.test.js  api.test.js  setup.js  useDarkMode.test.js
frontend/src/views/: AuthView.vue  CacheView.vue  ChannelsView.vue  DashboardView.vue  FilesView.vue  SettingsView.vue  SyncView.vue  ThumbnailsView.vue
middleware/: logging.py
scripts/: dev.sh  diag_tg_network.py  start.sh
services/: cache_manager.py  sync_engine.py  task_queue.py  telegram_client.py
tests/: conftest.py  test_auth_api.py  test_cache_api.py  test_cache_manager.py  test_channels_api.py  test_config.py  test_config_api.py  test_database.py  test_files_api.py  test_logging.py  test_models.py  test_post_sync_thumb.py  test_sync_api.py  test_sync_engine.py  test_task_queue.py  test_telegram_client.py  test_thumbnails_api.py
